<resources>
    <string name="app_name">Socio MAS</string>
    <string name="empleado_text">Número de Socio</string>
    <string name="actualiar.title">Tú aplicación no está actualizada</string>
    <string name="actualizar_description">Actualmente Existe una nueva versión de la aplicación Socio MAS. \n Serás redirigido a la página de descarga en
     \n %1$d  \n segundos
    </string>
    <string name="buscar">Buscar</string>
    <string name="nombre_contacto_formato">%1$s: %2$s</string>
    <string name="boton_panico_cancelado">Se canceló por petición del usuario el envío de la alerta de botón de pánico"</string>
    <string name="zona_horaria_formato">
        Zona horaria detectada: <![CDATA[<font color=red>%1$s</font>]]>
    </string>
    <string name="ultima_sincronizacion_formato">
        Última sincronización zona horaria: <![CDATA[<font color=red>%1$s</font>]]>
    </string>
    <string name="dialogo_horario_cancelar">
        Tu solicitud es  <![CDATA[<font color=red>%1$s</font>]]>  a   <![CDATA[<font color=red>%2$s</font>]]>  \n ¿Desea cancelar la solicitud?
    </string>
    <string name="dialogo_horario_cancelar_dialibre">
        Tu solicitud es  un   <![CDATA[<font color=red>día libre</font>]]>  \n ¿Desea cancelar la solicitud?
    </string>
    <string name="numero_telefono_igual">El número telefónico del contacto %1$s  es el mismo que se encuentra vinculado con su cuenta</string>
    <string name="escriba_motivo">Escriba un motivo válido</string>
    <string name="filtro_empleado">Filtrar por empleado</string>
    <string name="intentado_descargar">Intentando descargar imagen...</string>
    <string name="no_plantilla_permisos">No tienes a nadie a cargo con permisos por autorizar</string>
    <string name="no_plantilla_horarios">No tienes a nadie a cargo para asignar horarios</string>
    <string name="no_plantilla_justificar">No tienes a nadie a cargo con justificaciones por autorizar</string>
    <string name="contacto.valida.nombre">Ingresa el número de teléfono o el nombre del contacto %1$s </string>
    <string name="contacto.valida.pais">Selecciona el país del contacto %1$s</string>
    <string name="contacto.valida.telefono">Por favor revisa que el formato de  número de teléfono del contacto <b>%1$s</b>  sea el correcto</string>
    <string name="contacto.aviso">Aviso</string>
    <string name="actualizar.no_acceso">No tienes acceso a la aplicación debido a que no la tienes actualizada,aunque sí sigue reportando ubicaciones.\nDesgraciadamente la fecha de actualización ha terminado.</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cerrar">Cerrar</string>
    <string name="contactos.title">Mis contactos S.O.S.</string>
    <string name="log.panico">Panico</string>
    <string name="last.name">Última ubicación</string>
    <string name="log.ubicacione">Ubicaciones</string>
    <string name="horario.no_asignado">Sin asignar</string>
    <string name="no_imagen_vinculada">No hay ninguna imagen vinculada</string>
    <string name="seleccione_tipo_justificacion">Seleccione un tipo</string>
    <string name="comentario_vacio">El campo de comentarios no puede ir vacio</string>
    <string name="solicitar_justificacion">Solicitar justificación de está incidencia.</string>
    <string name="mis_justificaciones">Mis justificaciones</string>
    <string name="justificacion_aprobada">Justificación aprobada correctamente</string>
    <string name="justificacion_rechazada">Justificación rechazada correctamente</string>
    <string name="autorizado_jefe">Autorizado por jefe</string>
    <string name="permiso_aprobado">Permiso autorizado correctamente</string>
    <string name="permiso_rechazado">Permiso rechazado correctamente</string>
    <string name="gps_virtual_activado">Se ha detectado un GPS virtual activado</string>
    <string name="gps__virtual_inhabilitar">Favor de inhabilitar para no generar incidencias</string>
    <string name="selecciona_fecha_inicio">Seleccione la fecha de inicio</string>
    <string name="selecciona_fecha_fin">Seleccione la fecha de finalización</string>
    <string name="fecha_fin_posterior">La fecha de fin del permiso debe ser posterior o igual a la de inicio</string>
    <string name="hora_fin_posterior">La Hora de fin del permiso debe ser posterior a la hora de  inicio</string>
    <string name="horarios_dialogo">Horarios</string>
    <string name="mis_horarios">Mis horarios</string>
    <string name="dia_libre">Día libre</string>
    <string name="solicitudes_pendientes">Solicitudes pendientes por autorizar</string>
    <string name="horario_titulo">Solicitud de horario pendiente</string>
    <string name="solicitud_autorizada_correctamente">Solicitud de horario autorizada correctamente</string>
    <string name="solicitud_rechazada_correctamente">Solicitud de horario rechazada correctamente</string>
    <string name="horarios_de_mi_plantilla">Horarios de mi equipo</string>
    <string name="solicitudes_pendientes_de_autorizaci_n">Solicitudes pendientes de autorización</string>
    <string name="autorizar_rechazar_horario">Autorizar/Rechazar solicitud</string>
    <string name="no_horarios_pendientes">No hay horarios pendientes para este empleado</string>
    <string name="escribe_comentario">Escribe comentario</string>
    <string name="solicitud_cambio">Solicitud cambio horario</string>
    <string name="rojo_text">Demasiado tiempo sin sincronizar</string>
    <string name="naranja_text">Tienes registros sin sincronizar</string>
    <string name="verde_text">Tu dispositivo se encuentra operando correctamente</string>
    <string name="semaforo_admiracion">!</string>
    <string name="mi_lugar_trabajo">Mi lugar de trabajo</string>
    <string name="lugares_trabajo_title">Lugares de trabajo de</string>
    <string name="autorizado_rechazado_propuesta">Has autorizado  esta propuesta</string>
    <string name="autorizado_propuesta">Has autorizado la siguiente propuesta</string>
    <string name="rechazado_propuesta">Has rechazado la siguiente propuesta</string>
    <string name="zonas_ubicaciones">Ubicaciones</string>
    <string name="mis_ubicaciones">Mis ubicaciones</string>
    <string name="ubicaciones_plantilla">Ubicaciones de mi equipo</string>
    <string name="catalogo_zonas">Catálogo de zonas</string>
    <string name="titleZonasUbicacion">¿Deseas añadir un nuevo lugar de trabajo?</string>
    <string name="botonpop">Destino</string>
    <string name="zonapopboton">Zona</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="bateria">Su dispositivo tiene baja batería. Conecte el dispositivo al cargador.</string>
    <string name="beteriabaja">Bateria baja</string>
    <string name="ruta_empleado">Ruta de empleado</string>
    <string name="revisa_fecha">Asegurate que la opción de fecha y hora automáticas se encuentre activada en el dispositivo</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="token_llave">Llave maestra/token</string>
    <string name="registrado_anteriomente">El usuario ya ha sido registrado anteriormente.</string>
    <string name="revisa_empleado_correcto">Por favor revisa que el número de empleado sea el correcto</string>
    <string name="revisa_llave_maestra">Por favor revisa que la llave maestra o token sean correctos</string>
    <string name="revisa_numero_valido">Por favor revisa que el número de teléfono sea el correcto</string>
    <string name="Error_Conexion">Ocurrió un error al intentar hacer la conexión con los servicios,por favor intente más tarde</string>
    <string name="title_activity_last_ubicacion">Ultima úbicación</string>
    <string name="a_que_contactos_se_enviar_notificaci_n_n_en_caso_de_emergencia">¿A qué contactos se enviará notificación \n en caso de emergencia?</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="comentario">Comentario</string>
    <string name="agregar">Enviar solicitud</string>
    <string name="inicio">Inicio</string>
    <string name="selecciona_una_fecha">Selecciona una fecha</string>
    <string name="motivo">Motivo:</string>
    <string name="hora">Hora:</string>
    <string name="selecciona_hora">Selecicona una hora</string>
    <string name="fin">Fin:</string>
    <string name="comentarios">Comentarios</string>
    <string name="mis_permisos">Mis permisos</string>
    <string name="empleado">Empleado:</string>
    <string name="permisos">Permisos</string>
    <string name="permisos_de_mi_plantilla">Permisos de mi equipo</string>
    <string name="autorizar">Autorizar</string>
    <string name="rechazar">Rechazar</string>
    <string name="rechazados">Rechazados</string>
    <string name="por_autorizar">Por autorizar</string>
    <string name="justificar_y_autorizar">Justificar y Autorizar</string>
    <string name="editar_foto">Editar foto</string>
    <string name="d_a">Día</string>
    <string name="entrada">Entrada</string>
    <string name="salida">Salida</string>
    <string name="nivelPlantilla">Nivel de equipo</string>
    <string name="totalsocio">Total de socios</string>
    <string name="posvalida">Socios con posición válida</string>
    <string name="posinvalida">Socios no actualizados</string>
    <string name="otros">Otros</string>
    <string name="tu_solicitud_se_ha_enviado_correctamente">Tu solicitud se ha enviado correctamente</string>
    <string name="espera_la_autorizaci_n_de_tu_jefe">Espera la autorización de tu jefe.</string>
    <string name="eliminar">ELIMINAR DE MIS LUGARES DE TRABAJO</string>
    <string name="detalle_de_ruta">Detalle de ruta</string>
    <string name="n_mero_equivocado">Este no es mi número \n Editar número</string>
    <string name="momento_llamada">En un momento recibirás una llamada</string>
    <string name="momento_sms">En un momento recibirás una SMS</string>
    <string name="reenviar_c_digo">Solicitar nuevo código de verificación</string>
    <string name="su_n_mero_telef_nico_ha_sido_verificado_exitosamente">SU NÚMERO TELEFÓNICO HA SIDO VERIFICADO EXITOSAMENTE</string>
    <string name="editar_numero_telefonico">Editar número telefónico</string>
    <string name="numero_telefonico_validar">Ingresa un número telefónico valido</string>
    <string name="saltar">Saltar</string>
    <string name="punto">.</string>
    <string name="acepto">Si, acepto.</string>
    <string name="ahora_no">No, ahora no.</string>
    <string name="parrafo1">Para poder funcionar, Socio MAS necesita:</string>
    <string name="parrafo4">Usar la cámara y micrófono para enviar a los contactos seleccionados fotografía, video y audio en cuanto el servicio de emergencia se active.</string>
    <string name="parrafo2">Acceder a tus contactos para que puedas elegir los destinatarios de las emergencias. Asegurate de mantener esta información actualizada.</string>
    <string name="parrafo3">La ubicación de tu dispositivo para compartirla con contactos seleccionados cuando actives el botón de emergencia.</string>
    <string name="aceptas">¿Aceptas?</string>
    <string name="nomostrar">No volver a mostrar</string>
    <string name="asistencia_correcta">Asistencia correcta</string>
    <string name="salida_antes_de_horario">Salida antes de horario</string>
    <string name="entrada_despu_s_hora_limite">Entrada después hora límite</string>
    <string name="retardo">Retardo</string>
    <string name="descripci_n">Descripción</string>
    <string name="no_termina_dia">Todavía no termina el día</string>
    <string name="textoUnidadNegocio">Confirma si esta es la unidad de negocio a la que perteneces:</string>
    <string name="textoEsCorrecto">Es correcto</string>
    <string name="textoNoEsCorrecto">No es correcto</string>
    <string name="falta">Falta</string>
    <string name="estas_seguro">¿Estás seguro de querer eliminar la notificación?</string>
    <string name="eliminarlo">Eliminar</string>
</resources>