<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:background="#F7F5F1">

    <TableRow
        android:layout_marginLeft="-10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_column="1"
            android:gravity="left"
            android:padding="10sp"
            android:text="@string/d_a"
            android:textColor="#373333"
            android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <TextView
            android:layout_column="1"
            android:gravity="left"
            android:padding="10sp"
            android:text="@string/entrada"
            android:textColor="#373333"
            android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

        <TextView
            android:layout_column="1"
            android:gravity="left"
            android:padding="10sp"
            android:text="@string/salida"
            android:textColor="#373333"
            android:textAppearance="?android:attr/textAppearanceMedium" ></TextView>
    </TableRow>


</TableLayout>