<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/tvTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/estas_seguro"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnAceptar"
            style="@style/botonRedondoAmarillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTexto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/eliminarlo" />

        <Button
            android:id="@+id/btnCancelar"
            style="@style/botonRedondoGris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAceptar"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/cancelar" />

    </RelativeLayout>
</RelativeLayout>