<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bienvenida"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivUnidadNegocio"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/tvTitleMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/textoUnidadNegocio"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAceptar"
        style="@style/botonRedondoVerde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:drawableRight="@drawable/ic_action_done"
        android:text="@string/textoEsCorrecto" />

    <Button
        android:id="@+id/btnOtraUnidad"
        style="@style/botonRedondoAmarillo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableRight="@drawable/ic_clear_black_24dp"
        android:text="@string/textoNoEsCorrecto" />

</LinearLayout>